--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
 </head>
 <body>
     <main>
-        <section>
-            <h2>1.Oyuncu</h2>
-            <p>0</p>
-            <div>
-                <p>Zar</p
-                 <p>0</p>
+        <section class ="player player--0 player--active">
+            <!-- player classında variables  --0 isminde değişlken oluşturuldu --active diye değişken oluşturuldu.-->
+            <h2 class="name">1.Oyuncu</h2>
+            <p class="score">0</p>
+            <div class="current">
+                <p class="current-label">Zar</p>
+                 <p class="current-score">0</p>
             </div>
         </section>
-        <section>
-            <h2>2.Oyuncu</h2>
-            <p>0</p>
-            <div>
-                <p>Zar</p
-                 <p>0</p>
+        <section class="player player--1">
+            <h2 class="name">2.Oyuncu</h2>
+            <p class="score">0</p>
+            <div class="current">
+                <p class="current-label">Zar</p>
+                 <p class="current-score">0</p>
             </div>
         </section>
 
-        <img src = "" alt>
-        <button>Yeni Oyun</button>
-        <button>Zar At</button>
-        <button>Zar Tut</button>
+        <img src = "" alt class="dice">
+        <button class="btn btn--new">Yeni Oyun</button>
+        <button class="btn btn--roll">Zar At</button>
+        <button class="btn btn--hold">Zar Tut</button>
     </main>
 </body>
 </html>
