--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rolling The Dice</title>
+    <title>Dice Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
-        <section class ="player player--0 player--active">
-            <!-- player classında variables  --0 isminde değişlken oluşturuldu --active diye değişken oluşturuldu.-->
-            <h2 class="name">1.Oyuncu</h2>
-            <p class="score">0</p>
+        <section class="player player--0 player--active">
+            <h2 class="name" id="name--0">1. Player</h2>
+            <p class="score" id="score--0">0</p>
             <div class="current">
-                <p class="current-label">Zar</p>
-                 <p class="current-score">0</p>
+                <p class="current-label">Dice</p>
+                <p class="current-score" id="current--0">0</p>
             </div>
         </section>
         <section class="player player--1">
-            <h2 class="name">2.Oyuncu</h2>
-            <p class="score">0</p>
+            <h2 class="name" id="name--1">2. Player</h2>
+            <p class="score" id="score--1">0</p>
             <div class="current">
-                <p class="current-label">Zar</p>
-                 <p class="current-score">0</p>
+                <p class="current-label">Dice</p>
+                <p class="current-score" id="current--1">0</p>
             </div>
         </section>
-
-        <img src = "" alt class="dice">
-        <button class="btn btn--new">Yeni Oyun</button>
-        <button class="btn btn--roll">Zar At</button>
-        <button class="btn btn--hold">Zar Tut</button>
+        <img src="img/dice-1.png" alt="" class="dice">
+        <button class="btn btn--new">New Game</button>
+        <button class="btn btn--roll" id="btnRoll">Roll</button>
+        <button class="btn btn--hold">Hold</button>
     </main>
+    <script src="script.js"></script>
 </body>
+
 </html>
